--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -50,7 +50,7 @@ const services = [
             data-netlify-honeypot="bot-field"
             data-netlify-recaptcha="true"
             netlify-to="sales@printeksupplies.com"
-            action="/gracias"
+            action="/gracias/"
           >
             <!-- Netlify form detection -->
             <input type="hidden" name="form-name" value="contact" />
